--- a/templates/success.html
+++ b/templates/success.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Voucher Purchased Successfully!</h1>
-    <p>Your voucher code has been sent to you. Use it to login.</p>
+    <p>Your voucher code is your mpesa reference. Use it to login back to session.</p>
 </body>
 <footer>
     <p><span>
