login to success.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -50,7 +50,7 @@
 
                 // Redirect to /success.html after 1.5s
                 setTimeout(() => {
-                    window.location.href = "/success.html";
+window.location.href = `${window.location.origin}/success`;
                 }, 1500);
             } else {
                 voucherMessage.style.color = "red";
