--- a/templates/success.html
+++ b/templates/success.html
@@ -7,9 +7,10 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='wifi.png') }}">
 </head>
 <body>
+
+    <div class="container">
     <h1>Voucher Purchased Successfully!</h1>
-    <div>
-    <p>Your voucher code is your M-Pesa reference. Use it to login back to your session incase of logout.</p>
+           <p>Your voucher code is your M-Pesa reference. Use it to login back to your session incase of logout.</p>
 
     <!-- WhatsApp Support Link -->
     <p>Need help? <a href="https://wa.me/254746919779" target="_blank">Chat with us on WhatsApp</a></p>
