--- a/templates/success.html
+++ b/templates/success.html
@@ -22,7 +22,7 @@
             gap: 20px;
         }
         .container, .ads-container {
-            background: white;
+            background: #928888;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -30,6 +30,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-top: 30px;
         }
         .ads {
             width: 100%;
@@ -48,12 +49,12 @@
         }
         h1 {
             font-size: 22px;
-            color: #333;
+            color: #0daf30;
             text-align: center;
         }
         p {
             font-size: 16px;
-            color: #555;
+            color: hsl(180, 43%, 99%);
             text-align: center;
         }
         .button {
@@ -79,11 +80,14 @@
         .manicure:hover {
             background-color: #c2186b;
         }
-        footer {
-            margin-top: 20px;
-            font-size: 12px;
-            color: #666;
+        
+         footer {
             text-align: center;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
         }
 
         /* Responsive Design */
@@ -103,14 +107,14 @@
     <div class="wrapper">
         <!-- Left Section (50% Width) -->
         <div class="container">
-            <h1>Voucher Purchased Successfully!</h1>
+            <h1>Voucher Purchased Successfully!☺️</h1>
             <p>Your voucher code is your M-Pesa reference. Use it to log in again if you get disconnected.</p>
 
             <a href="https://chat.whatsapp.com/Fq8XujBmQbzJFKazIPA6Iq" target="_blank" class="button">⚡upport At HQ🛰️</a>
             <a href="https://whatsapp.com/channel/0029VaoQKgH2Jl8IveCvC93I" target="_blank" class="button">
                 Driphub Fid_dawg C🔥llection 
             </a>
-            <a href="smb://your-samba-server/movies" target="_blank" class="button">
+            <a href="smb://192.168.1.81/Movies" target="_blank" class="button">
                 Catch a Movie for Free
             </a>
             <a href="https://chat.whatsapp.com/LK7A5gihwie0vImGn43aI4" target="_blank" class="button manicure">
@@ -124,9 +128,6 @@
         </div>
     </div>
 
-    <footer>
-        <p>© 2025 Fid_Dawg, Inc.</p>
-    </footer>
 
     <script>
         async function loadAds() {
