success to production

--- a/templates/success.html
+++ b/templates/success.html
@@ -114,7 +114,7 @@
             <a href="https://whatsapp.com/channel/0029VaoQKgH2Jl8IveCvC93I" target="_blank" class="button">
                 Driphub Fid_dawg C🔥llection 
             </a>
-            <a href="smb://192.168.1.81/Movies" target="_blank" class="button">
+            <a href="smb://192.168.1.81/Movies/" target="_blank" class="button">
                 Catch a Movie for Free
             </a>
             <a href="https://chat.whatsapp.com/LK7A5gihwie0vImGn43aI4" target="_blank" class="button manicure">
